--- a/package.json
+++ b/package.json
@@ -1,2 +1,25 @@
-pillow
-tornado
+{
+  "name": "robohash.js",
+  "version": "0.1.0",
+  "description": "robohash.js =============",
+  "main": "index.js",
+  "directories": {
+    "example": "example"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alternatex/robohash.js"
+  },
+  "author": "Gianni Furger",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "gitHead": "a1b2b70fb93cd15e12369b8049520fc83b4a9193",
+  "dependencies": {
+    "gm": "~1.14.2",
+    "underscore": "~1.6.0",
+    "restify": "~2.6.1"
+  }
+}
