--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gm": "~1.14.2",
     "underscore": "~1.6.0",
     "restify": "~2.6.1"
+  },
+  "devDependencies": {
+    "pageres": "~0.2.3"
   }
 }
