--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "gm": "~1.14.2",
     "underscore": "~1.6.0",
-    "restify": "~2.6.1"
+    "restify": "~2.6.1",
+    "colors": "~0.6.2",
+    "node-gd": "~0.2.3"
   },
   "devDependencies": {
     "pageres": "~0.2.3"
