--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "gitHead": "a1b2b70fb93cd15e12369b8049520fc83b4a9193",
+  "engines": {
+    "node": "~0.10.20"
+  },
   "dependencies": {
     "gm": "~1.14.2",
     "underscore": "~1.6.0",
@@ -28,3 +31,4 @@
     "pageres": "~0.2.3"
   }
 }
+
