added yaml module

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "restify": "~2.6.1",
     "colors": "~0.6.2",
     "node-gd": "~0.2.3",
-    "node-image": "~0.5.1"
+    "node-image": "~0.5.1",
+    "yaml2json": "~1.0.2"
   },
   "devDependencies": {
     "pageres": "~0.2.3"
